validasi post product 🦙 🦒 🐘
